Fix clustering order logic in CREATE MATERIALIZED VIEW
patch by Benjamin Lerer; reviewed by Zhao Yang for CASSANDRA-16898

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+4.0.2
+ * Fix clustering order logic in CREATE MATERIALIZED VIEW (CASSANDRA-16898)
+
 4.0.1
  * Exclude Jackson 1.x transitive dependency of hadoop* provided dependencies (CASSANDRA-16854)
  * Tolerate missing DNS entry when completing a host replacement (CASSANDRA-16873)
