--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cassandra (4.0.2) UNRELEASED; urgency=medium
+
+  * New release 
+
+ -- Sam Tunnicliffe <samt@apache.org>  Tue, 07 Sep 2021 16:48:57 +0100
+
 cassandra (4.0.1) unstable; urgency=medium
 
   * New release
