Fix missed wait latencies in the output of `nodetool tpstats -F`
patch by Dimitar Dimitrov and Andrés de la Peña; reviewed by Ekaterina Dimitrova for CASSANDRA-16938

Co-authored-by: Andrés de la Peña <a.penya.garcia@gmail.com>
Co-authored-by: Dimitar Dimitrov <dmtrndmtrv@gmail.com>

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.0.2
+ * Fix missed wait latencies in the output of `nodetool tpstats -F` (CASSANDRA-16938)
  * Remove all the state pollution between tests in SSTableReaderTest (CASSANDRA-16888)
  * Delay auth setup until after gossip has settled to avoid unavailables on startup (CASSANDRA-16783)
  * Fix clustering order logic in CREATE MATERIALIZED VIEW (CASSANDRA-16898)
