--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Allow reverse iteration of resources during permissions checking (CASSANDRA-17016)
  * Add feature to verify correct ownership of attached locations on disk at startup (CASSANDRA-16879)
  * Make SSLContext creation pluggable/extensible (CASSANDRA-16666)
  * Add soft/hard limits to local reads to protect against reading too much data in a single query (CASSANDRA-16896)
