--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Add required -f option to use nodetool verify and standalone sstableverify (CASSANDRA-17017)
  * Add native transport rate limiter options to example cassandra.yaml, and expose metric for dispatch rate (CASSANDRA-17423)
  * Add diagnostic events for guardrails (CASSANDRA-17197)
  * Increase cqlsh version (CASSANDRA-17432)
