--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 3.0.26:
+ * Immediately apply stream throughput, considering negative values as unthrottled (CASSANDRA-16959)
  * Do not release new SSTables in offline transactions (CASSANDRA-16975)
  * ArrayIndexOutOfBoundsException in FunctionResource#fromName (CASSANDRA-16977, CASSANDRA-16995)
  * CVE-2015-0886 Security vulnerability in jbcrypt is addressed (CASSANDRA-9384)
