--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,7 @@ Future version (tbd)
  * Require only MODIFY permission on base when updating table with MV (STAR-564)
 
 4.1
+ * Request-Based Native Transport Rate-Limiting (CASSANDRA-16663)
  * Add information whether sstables are dropped to SchemaChangeListener (CASSANDRA-17582)
  * Save sstable id as string in activity table (CASSANDRA-17585)
  * Add support for UUID based sstable generation identifiers (CASSANDRA-17048)
@@ -13,7 +14,6 @@ Merged from 3.0:
  * Fix issue where frozen maps may not be serialized in the correct order (CASSANDRA-17623)
  * Suppress CVE-2022-24823 (CASSANDRA-17633)
  * fsync TOC and digest files (CASSANDRA-10709)
-
 
 4.0.4
  * Optimise BTree build,update and transform operations (CASSANDRA-15510)
