--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1
+ * Add metrics and logging around index summary redistribution (CASSANDRA-17036)
  * Add configuration options for minimum allowable replication factor and default replication factor (CASSANDRA-14557)
  * Expose information about stored hints via a nodetool command and a virtual table (CASSANDRA-14795)
  * Add broadcast_rpc_address to system.local (CASSANDRA-11181)
