CASSANDRA-17040: Upgrade Snappy version to support Apple M1
Snappy-java added M1 support since 1.1.8.2.(https://github.com/xerial/snappy-java/pull/268).

So let's upgrade snappy-java dependency to the latest release 1.1.8.4.

Change-Id: I5b95ead80211c570cab6d1d094d3afb42d6c4171
Signed-off-by: Yuqi Gu <guyuqi@apache.org>

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -60,6 +60,7 @@ Upgrading
       was created while the above property was set to be more than 30 otherwise they will not be able to log in.
     - Information about pending hints is now available through `nodetool listpendinghints` and `pending_hints` virtual
       table.
+    - Snappy-java was updated from 1.1.2.6 to 1.1.8.4 which supports Apple M1 devices.
 
 Deprecation
 -----------
