--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.0.2
+ * Fix multiple full sources can be select unexpectedly for bootstrap streaming (CASSANDRA-16945)
  * Fix cassandra.yaml formatting of parameters (CASSANDRA-17131)
  * Add backward compatibility for CQLSSTableWriter Date fields (CASSANDRA-17117)
  * Push initial client connection messages to trace (CASSANDRA-17038)
