--- a/NEWS.txt
+++ b/NEWS.txt
@@ -38,6 +38,10 @@ using the provided 'sstableupgrade' tool.
 
 New features
 ------------
+    - CDC data flushing now can be configured to be non-blocking with the configuration cdc_block_writes. Setting to true,
+      any writes to the CDC-enabled tables will be blocked when reaching to the limit for CDC data on disk, which is the
+      existing and the default behavior. Setting to false, the writes to the CDC-enabled tables will be accepted and
+      the oldest CDC data on disk will be deleted to ensure the size constraint.
     - New native functions to convert unix time values into C* native types: toDate(bigint), toTimestamp(bigint),
       mintimeuuid(bigint) and maxtimeuuid(bigint)
     - Support for multiple permission in a single GRANT/REVOKE/LIST statement has been added. It allows to
